<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Join</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="title_activity_create_event">Nowe wydarzenie</string>
    <string name="title_edit_event">Edycja wydarzenia</string>

    !-- Signin -->
    <string name="google">g+</string>
    <string name="facebook">f</string>
    <string name="sign_with">Zaloguj się poprzez</string>

    !-- Navigation Drawer items -->
    <string name="navdrawer_header_login_source">Zalogowany przez Facebook</string>
    <string name="navdrawer_events">Wydarzenia</string>
    <string name="navdrawer_participate">Biorę udział</string>
    <string name="navdrawer_myevents">Moje wydarzenia</string>
    <string name="navdrawer_settings">Ustawienia</string>
    <string name="navdrawer_help">Pomoc i opinie</string>
    <string name="navdrawer_subheader_favorites">ULUBIONE KATEGORIE</string>
    !--Categories -->
    <string name="add_favorite_category">Przeglądaj kategorie</string>
    <string name="category_event_bike">Jazda rowerem</string>
    !--Card -->
    <string name="join">Dołącz</string>
    !--New event-->    <string name="action_save">Zapisz</string>
    <string name="compulsory">Pole obowiązkowe</string>
    <string name="enter_title">Wpisz tytuł</string>
    <string name="max_title_length">/25</string>
    <string name="add_localization">Dodaj lokalizację</string>
    <string name="add_description">Dodaj opis</string>
    <string name="choose_category">Wybierz kategorię</string>
    <string name="limit">Ograniczona liczba miejsc</string>
    <string name="set_number_of_ppl">Podaj liczbę osób</string>
    <string name="pay">Udział płatny</string>
    <string name="set_price">Podaj koszt</string>
    <string name="ppl1"> osoba</string>
    <string name="ppl2"> osoby</string>
    <string name="ppl3"> osób</string>
    <string name="currency"> zł</string>
    !--InDetail event-->
    <string name="free">Darmowe</string>
    <string name="nolimit">Brak limitu</string>
    <string name="no_participants">Brak uczestników</string>
    <string name="participants">uczestników</string>
    <string name="participant">uczestnik</string>
    <string name="action_organizer">Dane organizatora</string>
    <string name="organizer">Organizator</string>
    <string name="mobile">Telefon:</string>
    <string name="mail">E-mail:</string>
    !--My events -->
    <string name="upcoming">Nadchodzące</string>
    <string name="past">Minione</string>
    <string name="cancel_event">Odwołaj</string>
    <string name="edit_event">Edytuj</string>
    <string name="leave_event">Zrezygnuj</string>
    <string name="msg_cancel_event">Czy odwołać wydarzenie?</string>
    <string name="msg_leave_event">Czy wypisać z wydarzenia?</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    !--Others -->
    <string name="loading_events">Trwa ładowanie wydarzeń...</string>
    <string name="loading_favorite_category">Aktualizowanie ulubionych kategorii...</string>
    <string name="loading_participate_event">Aktualizowanie uczestnictwa w wydarzeniu...</string>
    <string name="creating_event">Tworzenie nowego wydarzenia...</string>
    <string name="are_u_sure">Czy wylogować z konta?</string>
    <string name="logout">Wyloguj</string>
    <string name="cancel">Anuluj</string>
    <string name="no_iternet">Brak połączenia</string>
    <string name="retry">Ponów próbę</string>
    <string name="joined_to_event">Dołączono do wydarzenia.</string>
    <string name="left_event">Zrezygnowano z wydarzenia.</string>
    <string name="canceled_event">Odwołano wydarzenie.</string>


    <string name="facebook_app_id">1559652434287421</string>

    <string name="no_events_available">Nie znaleziono wydarzeń</string>
    <string name="participate_event">Dołącz</string>
    <string name="not_participate_event">Rezygnuj</string>
    <string name="no_room">Brak miejsc</string>
    <string name="took_place">Odbyło się</string>

    <string name="hello_world">Hello world!</string>

    <string name="filter_hide_full">Ukryj pełne</string>
    <string name="filter_only_free">Ukryj płatne</string>
    <string name="sort_alpha">Alfabetycznie</string>
    <string name="sort_start">Data wydarzenia</string>
    <string name="sort_create">Data dodania</string>

    <string name="event_full">Wydarzenie jest już pełne.</string>

</resources>
