<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:icon="@drawable/ic_toolbar_filter"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_filter_full" android:title="@string/filter_hide_full" android:checkable="true"/>
            <item android:id="@+id/action_filter_free" android:title="@string/filter_only_free" android:checkable="true"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:icon="@drawable/ic_toolbar_sort"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_sort_alpha" android:title="@string/sort_alpha"/>
            <item android:id="@+id/action_sort_start" android:title="@string/sort_start"/>
            <item android:id="@+id/action_sort_create" android:title="@string/sort_create"/>
        </menu>
    </item>

</menu>
