<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:id="@+id/new_event_title"
                style="@style/FormEditText"
                android:layout_marginLeft="@dimen/keyline_1"
                android:hint="@string/enter_title"
                android:singleLine="true"
                android:textStyle="bold" />
        </TableRow>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/keyline_1">

            <ImageView
                style="@style/FormIcon"
                android:src="@drawable/ic_time"
                android:baselineAlignBottom="false"
                android:layout_marginTop="12dp"
                android:layout_gravity="top" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/start_date"
                    style="@style/FormTextView"
                    android:text="niedziela, 29 mar 2015"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/end_date"
                    style="@style/FormTextView"
                    android:text="niedziela, 30 mar 2015"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right">
                <TextView
                    android:id="@+id/start_time"
                    style="@style/FormTextView"
                    android:text="20:15"/>

                <TextView
                    android:id="@+id/end_time"
                    style="@style/FormTextView"
                    android:text="20:15" />
            </LinearLayout>
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginLeft="64dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"
            android:orientation="horizontal">

            <ImageView
                style="@style/FormIcon"
                android:src="@drawable/ic_category"
                android:layout_marginTop="12dp"
                android:layout_gravity="top" />

            <EditText
                android:id="@+id/category"
                style="@style/FormEditText"
                android:hint="@string/choose_category" />
        </LinearLayout>


        <View
            style="@style/Divider"
            android:layout_marginLeft="64dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"
            android:orientation="horizontal">

            <ImageView
                style="@style/FormIcon"
                android:src="@drawable/ic_place"
                android:layout_marginTop="12dp"
                android:layout_gravity="top" />

            <EditText
                android:id="@+id/localization"
                style="@style/FormEditText"
                android:singleLine="true"
                android:hint="@string/add_localization" />
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginLeft="64dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"
            android:orientation="horizontal">

            <ImageView
                style="@style/FormIcon"
                android:src="@drawable/ic_description"
                android:layout_gravity="top"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/description"
                style="@style/FormEditText"
                android:hint="@string/add_description" />
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginLeft="64dp" />


    </LinearLayout>

</ScrollView>