<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_organizer"
        android:textColor="@color/black_87"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <FrameLayout
            android:id="@+id/photo_content"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:visibility="visible"
                android:layout_gravity="center" />

            <ProgressBar
                android:id="@+id/bar_photo"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="visible" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/keyline_1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/organizer_name"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="Jan"
                android:textColor="@color/black_87"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/organizer_surname"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="Kowalski"
                android:textColor="@color/black_87"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:paddingTop="@dimen/keyline_1"
        android:paddingRight="@dimen/keyline_1">

        <TextView
            android:id="@+id/label_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/keyline_1"
            android:text="@string/mobile"
            android:textColor="@color/black_87"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/mobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1"
            android:paddingBottom="@dimen/keyline_1"
            android:text="brak"
            android:textColor="@color/black_87"
            android:textSize="14sp"
            android:layout_toRightOf="@id/label_mobile"/>


        <TextView
            android:id="@+id/label_mail"
            android:layout_below="@id/label_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textColor="@color/black_87"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/mail"
            android:layout_below="@id/mobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="brak"
            android:textColor="@color/black_87"
            android:textSize="14sp"
            android:layout_alignStart="@id/mobile" />
    </RelativeLayout>
</LinearLayout>